--- a/src/components/art/index.scss
+++ b/src/components/art/index.scss
@@ -1,7 +1,24 @@
 @import "../../globalvars.scss";
 
 .index-art {
-  background-color: #59beef33;
+  // background-color: #59beef33;
+  background-image: linear-gradient(#4c4c4c, #2c2c2c);
+  color: whitesmoke;
+
+  transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
+
+  user-select: none;
+  cursor: pointer;
+
+  &:active{
+    // border-radius: 50%;
+    transform: scale(0.8);
+    // transform: rotate(360deg) scale(0.8);
+    // background-image: linear-gradient(#ffc300 , #c70039);
+    box-shadow:  0px 0px 100px rgba(0,0,0,0.38);
+    font-size: 2rem;
+  }
+
   @include flex-c-c();
 
   font-weight: bold;
