--- a/src/components/posts/index.scss
+++ b/src/components/posts/index.scss
@@ -5,7 +5,7 @@
   margin: 10px;
   border-radius: 10px;
 
-  @include flex-l-u();
+  // @include flex-l-u();
 
   @include for-phone-only {
     grid-column: 1/7;
@@ -26,5 +26,40 @@
   @include for-big-desktop-up {
     grid-column: 1/22;
     grid-row: 2/15;
+  }
+
+  display: grid;
+  grid-auto-rows: 140px;
+  grid-template-columns: repeat(1, calc(100% / 1));
+
+  .posts-card {
+    margin: 10px;
+    max-height: 100px;
+    padding: 20px;
+    border-radius: 10px;
+
+    color: whitesmoke;
+    font-size: 1.2rem;
+
+    background-image: linear-gradient(#4c4c4c, #2c2c2c);
+    background-attachment: fixed;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    text-transform: capitalize;
+
+    transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
+
+    cursor: pointer;
+
+    &:hover {
+      background-image: linear-gradient(#4c4c4c, black);
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.38);
+      font-weight: bold;
+      transform: scale(1.05);
+    }
   }
 }
