--- a/src/components/links/index.scss
+++ b/src/components/links/index.scss
@@ -9,17 +9,15 @@
   margin: 10px;
   border-radius: 10px;
 
-
   > * {
     color: black;
     text-transform: capitalize;
     border-bottom: 2px solid transparent;
     padding: 5px;
-    &:hover{
+    &:hover {
       border-bottom: 2px solid;
     }
   }
-  
 
   @include for-phone-only {
     grid-column: 1/7;
@@ -40,5 +38,28 @@
   @include for-big-desktop-up {
     grid-column: 11/22;
     grid-row: 1;
+  }
+
+  &.not-home {
+    @include for-phone-only {
+      grid-column: 1/7;
+      grid-row: 2;
+    }
+    @include for-tablet-portrait-up {
+      grid-column: 1/13;
+      grid-row: 3/5;
+    }
+    @include for-tablet-landscape-up {
+      grid-column: 13/19;
+      grid-row: 1/3;
+    }
+    @include for-desktop-up {
+      grid-column: 18/24;
+      grid-row: 1/3;
+    }
+    @include for-big-desktop-up {
+      grid-column: 21/31;
+      grid-row: 1;
+    }
   }
 }
