--- a/src/components/title/index.scss
+++ b/src/components/title/index.scss
@@ -39,4 +39,37 @@
     font-size: 3em;
     @include flex-l-c();
   }
+
+  &.not-home {
+    @include for-phone-only {
+      grid-column: 1/7;
+      grid-row: 1;
+      font-size: 2em;
+      @include flex-c-c();
+    }
+    @include for-tablet-portrait-up {
+      grid-column: 1/13;
+      grid-row: 1/3;
+      font-size: 2em;
+      @include flex-c-c();
+    }
+    @include for-tablet-landscape-up {
+      grid-column: 1/13;
+      grid-row: 1/3;
+      font-size: 2.5em;
+      @include flex-l-c();
+    }
+    @include for-desktop-up {
+      grid-column: 1/9;
+      grid-row: 1/3;
+      font-size: 3em;
+      @include flex-l-c();
+    }
+    @include for-big-desktop-up {
+      grid-column: 1/11;
+      grid-row: 1;
+      font-size: 3em;
+      @include flex-l-c();
+    }
+  }
 }
