--- a/src/pages/blog.scss
+++ b/src/pages/blog.scss
@@ -5,7 +5,7 @@
 
   @include for-phone-only {
     grid-column: 1/7;
-    grid-row: 10/20;
+    grid-row: 3;
   }
   @include for-tablet-portrait-up {
     grid-column: 1/13;
