--- a/src/templates/index.scss
+++ b/src/templates/index.scss
@@ -1,7 +1,7 @@
 .markdown-body {
 	box-sizing: border-box;
 	min-width: 200px;
-	max-width: 980px;
+	max-width: 800px;
 	margin: 0 auto;
 	padding: 45px;
 }
@@ -14,65 +14,72 @@
 
 body {
 	margin: 0px;
-	background-color: #000530 !important;
+	//background-color: #000530 !important;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	color: #b6e737 !important;
-	border-color: #ffffff4a !important;
+.warn{
+	color: white;
+	background-color: firebrick;
+	padding: 10px;
+	border-radius: 5px;
 }
 
-pre,
-table,
-thead,
-tbody,
-tr,
-th,
-td {
-	background-color: #193d6a !important;
-	color: whitesmoke !important;
-}
+// h1,
+// h2,
+// h3,
+// h4,
+// h5,
+// h6 {
+// 	color: #b6e737 !important;
+// 	border-color: #ffffff4a !important;
+// }
 
-p,
-ul,
-li,
-details,
-summary,
-div {
-	color: #22e39c !important;
-	border-color: #ffffff4a !important;
-}
-a {
-	//text-decoration: underline !important;
-	color: #0c9d9f !important;
-	&:hover {
-		color: #ff0089 !important;
-	}
-}
-hr {
-	background-color: #ffffff4a !important;
-}
+// pre,
+// table,
+// thead,
+// tbody,
+// tr,
+// th,
+// td {
+// 	background-color: #193d6a !important;
+// 	color: whitesmoke !important;
+// }
+
+// p,
+// ul,
+// li,
+// details,
+// summary,
+// div {
+// 	color: #22e39c !important;
+// 	border-color: #ffffff4a !important;
+// }
+// a {
+// 	//text-decoration: underline !important;
+// 	color: #0c9d9f !important;
+// 	&:hover {
+// 		color: #ff0089 !important;
+// 	}
+// }
+// hr {
+// 	background-color: #ffffff4a !important;
+// }
 
 * {
-	scrollbar-color: #0c9d9f #193d6a;
+	scrollbar-color: #c4c4c4 #fff;
 
 	&::selection {
-		background-color: #ff0089;
+		background-color: yellow;
 		color: black;
 	}
 
 	&::-webkit-scrollbar {
 		width: 15px !important;
-		background-color: #193d6a !important;
+		background-color: #fff !important;
 	}
 
 	&::-webkit-scrollbar-thumb {
-		background-color: #0c9d9f !important;
-		border: 2px solid #0c9d9f !important;
+		background-color: #c4c4c4 !important;
+		border: 2px solid #c4c4c4 !important;
 	}
 }
