--- a/src/templates/index.scss
+++ b/src/templates/index.scss
@@ -17,11 +17,15 @@ body {
 	//background-color: #000530 !important;
 }
 
-.warn{
+.warn {
 	color: white;
 	background-color: firebrick;
 	padding: 10px;
 	border-radius: 5px;
+}
+
+.dateSubtitle {
+	text-align: end;
 }
 
 // h1,
