--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -6,6 +6,12 @@
 	padding: 45px;
 }
 
+article {
+	img {
+		width: 100%;
+	}
+}
+
 @media (max-width: 767px) {
 	.markdown-body {
 		padding: 15px;
@@ -14,4 +20,34 @@
 
 body {
 	margin: 0px;
+}
+
+.warn {
+	color: white;
+	background-color: firebrick;
+	padding: 10px;
+	border-radius: 5px;
+}
+
+.dateSubtitle {
+	text-align: end;
+}
+
+* {
+	scrollbar-color: #c4c4c4 #fff;
+
+	&::selection {
+		background-color: yellow;
+		color: black;
+	}
+
+	&::-webkit-scrollbar {
+		width: 15px !important;
+		background-color: #fff !important;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background-color: #c4c4c4 !important;
+		border: 2px solid #c4c4c4 !important;
+	}
 }
